0.9 of site, added start of analysis